fixed spacing of paragraphs and event section

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ nav a:hover {
   margin-bottom: 50px;
   font-size: 24px;
   font-family: 'Josefin Slab', serif;
+  line-height: 1.25; 
 }
 
 .events{
@@ -95,6 +96,7 @@ nav a:hover {
 .event-text{
   display: grid;
   grid-template-columns: 25%  25% 25% 25%;
+  margin: 1em;
 }
 
 #event-table-title {
@@ -128,6 +130,7 @@ nav a:hover {
   font-size: 24px;
   margin: 5px;
   color: #708090;
+  line-height: 1.25;
 }
 
 .contact-us-section {
